--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port=3006",
     "build": "vue-cli-service build",
     "build:contract": "cd contract && bash build.sh && cd ../..",
     "deploy:contract": "near deploy --wasmFile out/main.wasm --accountId $ID"
